[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/boomerang.png" type="Texture" id=1]
[ext_resource path="res://objects/scripts/boomerang_projectile.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Area2D_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
